Thu May  3 07:42:01 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* examples/IPC_SAP/FILE_SAP/client.cpp: Fixed a warning with Linux
	  builds. 

Wed May  2 22:55:25 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* examples/ASX/Event_Server/Event_Server/Options.cpp:
	* examples/ASX/UPIPE_Event_Server/Options.cpp:
	* examples/IPC_SAP/FILE_SAP/client.cpp:
	* examples/Naming/test_open.cpp:
	* examples/Naming/test_writers.cpp: Fixed warnings in g++ builds. 

Wed May  2 18:36:29 2001  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* tests/README: Clarified that the shared memory tests now
	  work fine on Win9x!  Thanks to Cristian Ferritti for reminding
 	  me to do this.

Wed May  2 15:10:28 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/CDR_Stream.h (ACE_InputCDR): 
	* ace/CDR_Stream.cpp: Added a new constructor for ACE_inputCDR
	  class. This constructor would take the data block with a
	  pre-determined read and write pointer positions. This is helpful
	  when an application would like to create a CDR stream with a
	  smei-processed data block. 

Wed May  2 11:10:59 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* bin/auto_run_tests.lst: Added a colon to seperate the
	  run_test.pl specification from "!" that is used to indicate
	  where the scripts shouldn't be run.

Wed May 02 05:40:47 2001  Carlos O'Ryan  <coryan@uci.edu>

        * bin/auto_run_tests.lst:
          Use Queued_Message_Test/run_test.pl

Wed May  2 06:31:46 2001  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* ace/Makefile: Make it possible to set where the QTDIR is located.
	  Thanks to Thomas Groth <groth.th@nord-com.net> for this
 	  enhancement.

	* ace/Process.cpp (spawn): When an application running with user
	  ID=0 (i.e. root) spawns a new process using
 	  ACE_Process_Manager::spawn(), which in turn calls
 	  ACE_Process::spawn() and tries to set a user ID and a group ID
 	  for the new process different from root/other, the call to